# Server-Client-Application-Rust

./: .gitignore  Cargo.toml  README.md  SOLUTION.md  SOLUTION_2.md  build.rs
src/: client.rs  lib.rs  server.rs
src/client/: client.rs  mod.rs
src/client/services/: calculator.rs  echo.rs  mod.rs
src/logging/: mod.rs  setup.rs  types.rs
src/proto/: calculator.proto  echo.proto  mod.rs
src/server/: mod.rs  server.rs
src/server/services/: calculator.rs  echo.rs  mod.rs
tests/: calculator_test.rs  client_test.rs  connection_stress_test.rs  echo_test.rs  load_test.rs  message_integrity_test.rs
tests/common/: mod.rs  test_utils.rs
