# Cargo.toml: Rust package manifest file
# Defines project metadata, dependencies, and build configuration

# Project metadata section
[package]
name = "embedded-recruitment-task"     # Name of the package
version = "0.0.1"                     # Current version
edition = "2021"                      # Rust edition being used

# Main dependencies required at runtime
[dependencies]
# Tokio: Async runtime for Rust
# Features enabled:
# - rt-multi-thread: Multi-threaded runtime
# - sync: Async synchronization primitives
# - time: Time utilities
# - macros: Async/await syntax support
tokio = { version = "1.28", features = ["rt-multi-thread", "sync", "time", "macros"] }

# gRPC implementation dependencies
tonic = "0.10.2"    # gRPC framework
prost = "0.12"      # Protocol Buffers implementation

# Dependencies needed during build time
[build-dependencies]
tonic-build = "0.10.2"    # Compiles .proto files to Rust code

# Dependencies only used for testing
[dev-dependencies]
tokio-test = "0.4"    # Testing utilities for async code
